replace unmodifiableList in DefaultMetadataExtractor